Destroy Bricks OK ! A revoir avec un Cast ?

--- a/CasseBriques/CasseBriques.csproj
+++ b/CasseBriques/CasseBriques.csproj
@@ -94,7 +94,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Ball.cs" />
-    <Compile Include="Briques.cs" />
+    <Compile Include="Bricks.cs" />
     <Compile Include="CustomFunctions.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="Paddle.cs" />
