--- a/CasseBriques/CasseBriques.csproj
+++ b/CasseBriques/CasseBriques.csproj
@@ -90,6 +90,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Animations.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
