--- a/CasseBriques/CasseBriques.csproj
+++ b/CasseBriques/CasseBriques.csproj
@@ -99,7 +99,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Animations.cs" />
+    <Compile Include="AnimManager.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
